@@ -6,6 +6,8 @@ package basicKnowledge.jvm.GC;
 * -Xmn:新生代内存大小
 * -XX:+PrintGCDetails 发生垃圾回收时打印日志
 * -XX:SurvivorRatio=8 Eden区与survivor的比例
+* -XX:+UseParNewGC 使用ParNew+Serial Old进行内存回收
+* 新生代总的可用空间为：8192+1024=9216（Eden+1个survivor）
  */
 public class TestAllocation {
     private static int _1MB=1024*1024;
@@ -15,7 +17,7 @@ public class TestAllocation {
         allocation1=new byte[2*_1MB];
         allocation2=new byte[2*_1MB];
         allocation3=new byte[2*_1MB];
-        allocation4=new byte[4*_1MB];
+        allocation4=new byte[4*_1MB];//发生垃圾回收（为毛我也不知道）
 
     }
 }
